# Genesis-sim-V0

./: .gitignore  README.md  capacitor.config.ts  index.html  metadata.json  package-lock.json  package.json  tsconfig.cli.json  tsconfig.json
.github/workflows/: build-multiplatform.yml  build-native.yml
android/app/: build.gradle
android/app/src/main/java/com/genesis/simulator/: MainActivity.java
android/app/src/main/res/values/: strings.xml
assembly/: index.ts
docs/: GDD.md  OPTIMIZATIONS.md  ROADMAP.md
native/: CMakeLists.txt
native/android/: settings.gradle
native/android/app/: build.gradle
native/android/app/src/main/: AndroidManifest.xml
native/android/app/src/main/java/com/genesis/sim/: GenesisActivity.java
native/android/app/src/main/res/values/: styles.xml
native/src/: engine.cpp  engine.h  fontdata.h  gui.cpp  gui.h  main.cpp  renderer.cpp  renderer.h  screenlog.h  types.h
public/: genesis-engine.wasm
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/cli/: exporter.ts  index.ts  reporter.ts  runner.ts
src/sim/: engine.ts  types.ts  wasm-bindings.d.ts  wasm-bindings.js  worker.ts
