[package]
name = "genesis-sim"
version = "3.0.0"
description = "Genesis 3.0 - Revolutionary Artificial Life Simulator"
authors = ["Genesis Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
